# Cpp-Testbench

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  daq_and_demod.cpp  daq_class_testbench.cpp  dft_testbench.cpp  main.cpp  main_cube_test.cpp  ni_daq_test.cpp  openigtlink_testbench.cpp  server_test.cpp  server_test_2.cpp  simulated_data.txt  simulated_data_w_noise.txt  solver_class_testbench.cpp  system_test.cpp  yOriented-10cm.txt  yOriented-25cm.txt  zOriented-10cm.txt
src/: CMakeLists.txt  OpenIGTLink_class.cpp  OpenIGTLink_class.h  coil_dimension_calc.cpp  coil_dimension_calc.h  coil_spec.cpp  coil_spec.h  daq_class.cpp  daq_class.h  demodulation_class.cpp  demodulation_class.h  field_coil_calc.cpp  field_coil_calc.h  generate_testpoints.cpp  generate_testpoints.h  sensor_objective_function.cpp  sensor_objective_function.h  solver_class.cpp  solver_class.h
tests/: CMakeLists.txt
